--- a/style.css
+++ b/style.css
@@ -1,31 +1,34 @@
 html{
     font-family: "Poppins", sans-serif;
-    background-color: #F9F9F9;
+    font-size: 16px;
 }
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+.dark-text{
+    color:#3E435D;
+}
+.gray-text{
+    color:#ADA7A7;
+}
 #container{
     display: flex;
     flex-direction: row;
 }
 #navbar{
-    padding-top: 176px;
+    padding-top: 159px;
+    padding-bottom: 523px;
     width: 78px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 47px;
+    justify-content: space-between;
     background-color: #FFFFFF;
 }
-#navbar #element-background{
-    display: grid;
-    place-content: center;
-    width: 100%;
+#navbar .navbar-box{
+    padding: 17px 27px;
     height: 58px;
-    background-color: #ECF2FE;
 }
 .icon{
     width: 24px;
@@ -33,20 +36,17 @@ html{
 }
 #main{
     padding: 32px 40px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 32px;
-    justify-content: center;
-    margin: 0 auto;
+    background-color: #F9F9F9;
 }
 #header{
-    width: 1282px;
-    height: 72px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
 }
 #left-header{
     display: flex;
@@ -55,22 +55,16 @@ html{
 }
 #right-header{
     display: flex;
-    flex-direction: row;
     gap: 20px;
-    margin: 10px 0;
 }
 #search{
     padding: 14px 20px;
     display: flex;
-    flex-direction: row;
     gap: 16px;
     width: 354px;
     height: 52px;
     border-radius: 8px;
     align-items: center;
-    font-size: 16px;
-    font-weight: 400;
-    color: #ADA7A7;
     background-color: #FFFFFF;
 }
 #notification{
@@ -81,34 +75,25 @@ html{
     border-radius: 8px;
 }
 #content-container{
-    width: 1282px;
-    height: auto;
     display: flex;
     flex-direction: column;
-    gap: 32px;
-    justify-content: center;
     background-color:#FFFFFF;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    padding-bottom: 71px;
 }
 #content{
-    width: 1218px;
-    height: 653px;
+    padding: 32px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    margin: 0 auto;
+    gap: 30px;
 }
 #alexa-header{
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
 #alexa-name{
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     gap: 24px;
@@ -120,37 +105,27 @@ html{
     height: 44px;
     border-radius: 8px;
     background-color: #4182F9;
-    font-size: 16px;
-    font-weight: 400;
     color: #FFFFFF;
 }
 #alexa-information{
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
-    gap: 32px;
+    row-gap: 25px;
+    justify-content: space-between;
 }
 .input-box{
     width: 593px;
     display: flex;
     flex-direction: column;
     gap: 12px;
-    font-size: 16px;
-    font-weight: 400;
-    color: #000000;
 }
 .select-box{
     padding: 14px 20px;
-    width: 593px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     border-radius: 8px;
     background-color: #F9F9F9;
-    font-size: 16px;
-    font-weight: 400;
-    color:#ADA7A7;
 }
 #alexa-contact{
     display: flex;
@@ -159,13 +134,8 @@ html{
 }
 #alexa-email{
     display: flex;
-    flex-direction: row;
     gap: 20px;
     align-items: center;
-}
-#alexa-email img{
-    width: 48px;
-    height: 48px;
 }
 #email-address{
     display: flex;
@@ -179,7 +149,5 @@ html{
     height: 44px;
     border-radius: 8px;
     background-color: #ECF2FE;
-    font-size: 16px;
-    font-weight: 400;
     color:#4182F9;
 }
