--- a/style.css
+++ b/style.css
@@ -110,10 +110,10 @@ html{
     display: flex;
     flex-wrap: wrap;
     row-gap: 25px;
-    justify-content: space-between;
+    gap: 32px;
 }
 .input-box{
-    width: 593px;
+    width: calc((100% - 32px * (2 - 1)) / 2);
     display: flex;
     flex-direction: column;
     gap: 12px;
