--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ html{
     border-top-right-radius: 8px;
 }
 #content{
-    padding: 32px;
+    padding: 32px 32px 71px 32px;
     display: flex;
     flex-direction: column;
     gap: 30px;
