--- a/style.css
+++ b/style.css
@@ -27,7 +27,9 @@ html{
     background-color: #FFFFFF;
 }
 #navbar .navbar-box{
-    padding: 17px 27px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 58px;
 }
 .icon{
@@ -68,7 +70,9 @@ html{
     background-color: #FFFFFF;
 }
 #notification{
-    padding: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 52px;
     height: 52px;
     background-color: #FFFFFF;
